# RUKA

./: calibrate_motors.py  pyproject.toml
motor_limits/: right_curl_limits.npy  right_tension_limits.npy
ruka_hand/control/: hand.py
ruka_hand/utils/: dynamixel_util.py
scripts/: diagnose_dynamixels.py  make_fist.py  reset_motors.py  zero_motor_positions.py
