[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv.extra-build-dependencies]
ruka_hand = ["uv_build"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
ruka-hand = { workspace = true, editable = true }


[project]
name = "ruka_hand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blosc>=1.11.4",
    "bs4>=0.0.2",
    "diffusers==0.11.1",
    "dtw>=1.4.0",
    "dynamixel-sdk>=4.0.5",
    "einops>=0.8.2",
    "flask>=3.1.3",
    "h5py>=3.16.0",
    "huggingface-hub==0.11.1",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.3",
    "isort>=8.0.1",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "osfclient>=0.0.5",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "record3d>=1.4.1",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
    "zmq>=0.0.0",
]

[dependency-groups]
dev = [
    "ruka-hand",
]
